--- a/css/site.css
+++ b/css/site.css
@@ -1,12 +1,16 @@
 body {
 	margin: 0px;
 	font-family: "Noto Sans", sans-serif;
+	height: 100vh;
+	width: 200vw;
+	overflow: hidden;
 }
 
 #header {
 	height: 100vh;
 	width: 100vw;
 	display: flex;
+	float: left;
 	background-image: url("../images/hero.jpg");
 	background-position: center center;
 	background-size: cover;
@@ -40,4 +44,12 @@ h1 {
 	padding: 0rem 2rem;
 	margin-top: 0rem;
 	margin-bottom: 0rem;
+}
+
+#main-site {
+	float: left;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 100vh;
+	width: 100vw;
 }
