--- a/css/site.css
+++ b/css/site.css
@@ -6,6 +6,10 @@ body {
 	overflow: hidden;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 #header {
 	height: 100vh;
 	width: 100vw;
@@ -61,7 +65,7 @@ h1 {
 	background-color: #fbfaf6;
 	width: 80%;
 	margin: 3rem auto;
-	padding: 2rem;
+	padding: 3rem 6rem;
 	-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
@@ -78,4 +82,25 @@ h1 {
 
 #content-side * {
 	margin: auto 1rem;
+}
+
+h4 {
+	margin-left: 3rem;
+}
+
+ul {
+	margin-left: 3rem;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+#contact-links a {
+	margin: 0rem 1rem;
 }
