--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0px;
-	font-family: "Noto Sans", sans-serif;
+	font-family: "Arial", Arial, sans-serif;
 	height: 100vh;
 	width: 200vw;
 	overflow: hidden;
@@ -42,14 +42,6 @@ body {
 	text-align: center;
 }
 
-h1 {
-	font-size: 3rem;
-	width: max-content;
-	padding: 0rem 2rem;
-	margin-top: 0rem;
-	margin-bottom: 0rem;
-}
-
 #main-site {
 	float: left;
 	overflow-y: scroll;
@@ -84,12 +76,38 @@ h1 {
 	margin: auto 1rem;
 }
 
+h1 {
+	font-size: 3rem;
+	width: max-content;
+	padding: 0rem 2rem;
+	margin-top: 0rem;
+	margin-bottom: 0rem;
+}
+
+h2 {
+	font-size: 3rem;
+	margin-bottom: 0.5rem;
+}
+
+h3 {
+	margin-bottom: 0.25rem;
+	margin-top: 1rem;
+}
+
 h4 {
 	margin-left: 3rem;
+	margin-bottom: 0.25rem;
+	margin-top: 0.25rem;
 }
 
 ul {
 	margin-left: 3rem;
+	margin-top: 0.25rem;
+}
+
+li, p, .sub {
+	font-family: "Times New Roman", serif;
+	font-weight: normal;
 }
 
 a {
