--- a/css/site.css
+++ b/css/site.css
@@ -42,6 +42,10 @@ body {
 	text-align: center;
 }
 
+#cha-cha-slide {
+	transition: margin 1s;
+}
+
 #main-site {
 	float: left;
 	overflow-y: scroll;
