--- a/css/site.css
+++ b/css/site.css
@@ -1,117 +1,38 @@
 body {
 	margin: 0px;
-	font-family: "Arial", Arial, sans-serif;
+	font-family: "Noto Sans", "Arial", Arial, sans-serif;
 	height: 100vh;
-	width: 200vw;
-	overflow: hidden;
+	width: 100vw;
+}
+
+html {
+	scrollbar-width: thin;
+	overflow-x: hidden;
 }
 
 * {
 	box-sizing: border-box;
 }
 
-#header {
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	float: left;
-	background-image: url("../images/hero.jpg");
-	background-position: center center;
-	background-size: cover;
-}
-
-#header-center {
-	margin: auto;
-	color: white;
-	text-align: center;
-	width: min-content;
-}
-
-.header-side {
-	margin: auto 1rem;
-	color: white;
-	width: min-content;
-	opacity: 0.75;
-}
-
-.hover-point:hover {
-	cursor: pointer;
-}
-
 .ta-c {
 	text-align: center;
 }
 
-#cha-cha-slide {
-	transition: margin 1s;
-}
-
 #main-site {
-	float: left;
-	overflow-y: scroll;
-	scrollbar-width: thin;
-	overflow-x: hidden;
-	height: 100vh;
 	width: 100vw;
 	background-image: url("../images/bg-pattern.png");
 	background-position: center center;
+	padding: 2rem;
 }
 
 .content {
 	background-color: #fbfaf6;
-	width: 80%;
+	width: 70%;
 	margin: 3rem auto;
-	padding: 3rem 6rem;
+	padding: 3rem 8rem;
 	-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-}
-
-#content-side {
-	color: white;
-	width: min-content;
-	opacity: 0.75;
-	height: 100vh;
-	position: fixed;
-	display: flex;
-}
-
-#content-side * {
-	margin: auto 1rem;
-}
-
-h1 {
-	font-size: 3rem;
-	width: max-content;
-	padding: 0rem 2rem;
-	margin-top: 0rem;
-	margin-bottom: 0rem;
-}
-
-h2 {
-	font-size: 3rem;
-	margin-bottom: 0.5rem;
-}
-
-h3 {
-	margin-bottom: 0.25rem;
-	margin-top: 1rem;
-}
-
-h4 {
-	margin-left: 3rem;
-	margin-bottom: 0.25rem;
-	margin-top: 0.25rem;
-}
-
-ul {
-	margin-left: 3rem;
-	margin-top: 0.25rem;
-}
-
-li, p, .sub {
-	font-family: "Times New Roman", serif;
-	font-weight: normal;
 }
 
 a {
@@ -123,6 +44,70 @@ a:hover {
 	text-decoration: underline;
 }
 
-#contact-links a {
-	margin: 0rem 1rem;
+header {
+	width: 100%;
+	padding-left: 10%;
+	padding-right: 10%;
+	display: flex;
+	background-color: #333;
+	border-bottom: 2px solid #999;
+}
+
+header * {
+	display: inline-block;
+	color: #fff;
+}
+
+header h1 {
+	margin: .5rem 0rem;
+}
+
+header ul {
+	margin: auto 0rem;
+	margin-left: auto;
+}
+
+header ul li {
+	margin-left: 2rem;
+}
+
+.page-pic {
+	margin: -3rem -8rem 0rem -8rem;
+	height: 30rem;
+	
+	background-position: center center;
+	background-size: cover;
+}
+
+.document {
+	width: 100%;
+	height: 60rem;
+}
+
+#proj-list section {
+	border: solid 1px grey;
+	border-radius: 10px; 
+	background-color: #eee; 
+	margin-top: 2rem;
+}
+
+#proj-list section a {
+	display: flex;
+}
+
+.proj-pic {
+	display: inline-block;
+	width: 12rem;
+	height: 12rem;
+	background-position: center center;
+	background-size: cover;
+	border-right: 1px solid grey;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px; 
+}
+
+.proj-desc {
+	margin-left: 2rem;
+	height: 12rem;
+	overflow: hidden;
 }
