--- a/css/site.css
+++ b/css/site.css
@@ -104,6 +104,7 @@ header ul li {
 	border-right: 1px solid grey;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px; 
+	flex-shrink: 0;
 }
 
 .proj-desc {
