--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,7 @@ body {
 	font-family: "Noto Sans", "Arial", Arial, sans-serif;
 	height: 100vh;
 	width: 100vw;
+	font-size: 18px;
 }
 
 html {
@@ -112,4 +113,10 @@ header ul li {
 	margin-left: 2rem;
 	height: 12rem;
 	overflow: hidden;
+}
+
+#headshot {
+	width: 20rem;
+	height: 20rem;
+	float: right;
 }
