--- a/css/site.css
+++ b/css/site.css
@@ -79,6 +79,8 @@ header ul li {
 	
 	background-position: center center;
 	background-size: cover;
+
+	display: flex;
 }
 
 .document {
@@ -121,4 +123,15 @@ header ul li {
 	float: right;
 	margin-left: 2rem;
 	margin-bottom: 2rem;
+}
+
+.hero-t {
+	margin: auto auto;
+	color: #fff;
+	text-align: center;
+}
+
+.hero-t h1 {
+	font-size: 3rem;
+	margin-bottom: 0rem;
 }
