--- a/css/resume.css
+++ b/css/resume.css
@@ -1,33 +1,42 @@
 .hover-point:hover {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 h2 {
-	font-size: 3rem;
-	margin-bottom: 0.5rem;
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
 }
 
 h3 {
-	margin-bottom: 0.25rem;
-	margin-top: 1rem;
+    margin-bottom: 0.25rem;
+    margin-top: 1rem;
 }
 
 h4 {
-	margin-left: 3rem;
-	margin-bottom: 0.25rem;
-	margin-top: 0.25rem;
+    margin-left: 3rem;
+    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
 }
 
 ul {
-	margin-left: 3rem;
-	margin-top: 0.25rem;
+    margin-left: 3rem;
+    margin-top: 0.25rem;
 }
 
 li, p, .sub {
-	font-family: "Times New Roman", serif;
-	font-weight: normal;
+    font-family: "Times New Roman", serif;
+    font-weight: normal;
 }
 
 #contact-links a {
-	margin: 0rem 1rem;
+    margin: 0 1rem;
+}
+
+#resume a {
+    color: inherit !important;
+    text-decoration: none !important;
+}
+
+#resume a:hover {
+    text-decoration: underline !important;
 }
