--- a/css/resume.css
+++ b/css/resume.css
@@ -1,34 +1,34 @@
-.hover-point:hover {
+#resume .hover-point:hover {
     cursor: pointer;
 }
 
-h2 {
+#resume h2 {
     font-size: 3rem;
     margin-bottom: 0.5rem;
 }
 
-h3 {
+#resume h3 {
     margin-bottom: 0.25rem;
     margin-top: 1rem;
 }
 
-h4 {
+#resume h4 {
     margin-left: 3rem;
     margin-bottom: 0.25rem;
     margin-top: 0.25rem;
 }
 
-ul {
+#resume ul {
     margin-left: 3rem;
     margin-top: 0.25rem;
 }
 
-li, p, .sub {
+#resume li, #resume p, #resume .sub {
     font-family: "Times New Roman", serif;
     font-weight: normal;
 }
 
-#contact-links a {
+#resume #contact-links a {
     margin: 0 1rem;
 }
 
