--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Raleway', sans-serif !important;
 }
 
-.no-webp #site-hero {
+.no-webp #site-hero, .no-js #site-hero {
     background-image: url("/images/hero-index.jpg");
 }
 
@@ -12,7 +12,7 @@ body {
     background-image: url("/images/hero-index.webp");
 }
 
-.no-webp #site-background {
+.no-webp #site-background, .no-js #site-background {
     background-image: url("/images/bg-pattern.png");
 }
 
